--- a/project_management_app/project_task/templates/project_task/base.html
+++ b/project_management_app/project_task/templates/project_task/base.html
@@ -2,12 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {% block title %} {% endblock %}
-    {% block css %} {% endblock %}
-    {% block js %} {% endblock %}
+    {% block title %}
+    {% endblock %}
+
+    {% block css %}
+        <style>
+            .sidenav{
+                height: 100%;
+                width: 160px;
+                position: fixed;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                background-color: #111;
+                overflow-x: hidden;
+                padding-top: 20px;
+            }
+
+            .sidenav a {
+                padding: 6px 8px 6px 16px;
+                text-decoration: none;
+                font-size: 25px;
+                color: #818181;
+                display: block;
+            }
+
+            .sidenav a:hover{
+                color: #f1f1f1;
+            }
+
+            .main{
+                margin-left: 160px;
+                padding: 0 10px;
+            }
+
+            body {
+                padding-top: 0; /* Adjust this value as needed */
+            }
+        </style>
+    {% endblock %}
+
+    {% block js %}
+    {% endblock %}
 </head>
 
 <body>
-    {% block content %} {% endblock %}
+    <!-- Sidenav -->
+        <div class="sidenav">
+            <a href="{% url 'home' %}">Home</a>
+            <a href="{% url 'project_backlog' %}">Project Backlog</a>
+        </div>
+
+    <!-- Content -->
+    <div id="content", name="content" class="main">
+        <div class="row  justify-content-center">
+            <div class ="col-8">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
 </body>
 </html>
