--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -38,7 +38,7 @@
                 <td>{{task.story_point}}</td>
                 <td>{{task.assignee}}</td>
                 <td>{{task.status}}</td>
-                <td><button type="button" class="btn btn-danger" id="delete-task">Delete</button></td>
+                <td><a href="{% url 'delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a></td>
             </tr>
             {% endfor %}
         </tbody>
@@ -62,7 +62,7 @@
                                 <h5 class="card-title">{{task.name}}</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">{{task.type}}</h6>
                                 <p class="card-text">{{task.description}}</p>
-                                <a href="#" class="card-link">Delete</a>
+                                <a href="{% url 'delete_task' task.id %}" class="card-link btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a>
                             </div>
                         </div>
                     {% endif %}
@@ -83,7 +83,7 @@
                                 <h5 class="card-title">{{task.name}}</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">{{task.type}}</h6>
                                 <p class="card-text">{{task.description}}</p>
-                                <a href="#" class="card-link">Delete</a>
+                                <a href="{% url 'delete_task' task.id %}" class="card-link btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a>
                             </div>
                         </div>
                     {% endif %}
@@ -104,7 +104,7 @@
                                 <h5 class="card-title">{{task.name}}</h5>
                                 <h6 class="card-subtitle mb-2 text-muted">{{task.type}}</h6>
                                 <p class="card-text">{{task.description}}</p>
-                                <a href="#" class="card-link">Delete</a>
+                                <a href="{% url 'delete_task' task.id %}" class="card-link btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a>
                             </div>
                         </div>
                     {% endif %}
