--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -1,18 +1,50 @@
 {% extends "project_task/base.html" %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
 
 {% block title %}
 <title>Project Backlog</title>
 {% endblock %}
 
+{% block extra_styles %}
+    <style>
+        .tags-container {
+            max-height: 1.5em; /* This might need adjustment based on your badge height */
+            overflow: hidden;
+            position: relative;
+        }
+
+        .tags-container::after {
+            content: "...";
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(to right, transparent, white 50%);
+            padding-left: 10px;
+            pointer-events: none; /* Prevent the pseudo-element from being clickable */
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
 <h1>Project Backlog</h1>
 
-<!-- View options -->
-<label for="view">View:</label>
-<select id="view" onchange="changeView()">
-    <option value="listView">List View</option>
-    <option value="cardView">Card View</option>
-</select>
+<div class="container-fluid mb-4 mt-4">
+    <div class="row">
+        <!-- View options -->
+        <div class="col-sm-10">
+            <label for="view">View:</label>
+            <select id="view" onchange="changeView()">
+                <option value="listView">List View</option>
+                <option value="cardView">Card View</option>
+            </select>
+        </div>
+        <!-- Button trigger modal -->
+        <div class="col-sm-2 text-right" id="create-task-listview">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewTask">create new task</button>
+        </div>
+    </div>
+</div>
 
 <!-- List view -->
 <div class="container-fluid" id="listView">
@@ -20,11 +52,9 @@
         <thead class="thead-light">
             <tr>
                 <th>Name</th>
-                <th>Type</th>
-                <th>Priority</th>
                 <th>Story Point</th>
-                <th>Assignee</th>
-                <th>Status</th>
+                <th>Priority</th>
+                <th>Tags</th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -33,11 +63,13 @@
             {% for task in tasks%}
             <tr>
                 <td>{{task.name}}</td>
-                <td>{{task.type}}</td>
-                <td>{{task.priority}}</td>
                 <td>{{task.story_point}}</td>
-                <td>{{task.assignee}}</td>
-                <td>{{task.status}}</td>
+                <td>{{task.priority}}</td>
+                <td>
+                    {% for tag in task.tags.all %}
+                        <span class="badge badge-info m-1">{{tag}}</span>
+                    {% endfor %}
+                </td>
                 <td><a href="{% url 'delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a></td>
             </tr>
             {% endfor %}
@@ -48,37 +80,77 @@
 <!-- Card View Section -->
 <div class="container-fluid" id="cardView" style="display: none;">
     <div class="row">
-        {% for status_title in statuses %}
-            <!-- {{ status_title.1 }} Column -->
-            <div class="col-sm-4">
-                <div class="card">
-                    <div class="card-header"><h2>{{ status_title.1 }}</h2></div>
+        {% for task in tasks %}
+            <div class="col-sm-3">
+                <div class="card mb-3" style="height: 13rem;">
                     <div class="card-body">
-                        {% for task in tasks %}
-                        {% if task.status == status_title.0 %}
-                            <div class="card mb-3" style="width: 10rem;">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{task.name}}</h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">{{task.type}}</h6>
-                                    <p class="card-text">{{task.description}}</p>
-                                    <a href="{% url 'delete_task' task.id %}" class="card-link btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a>
-                                </div>
-                            </div>
-                        {% endif %}
-                        {% endfor %}
+                        <h4 class="card-title">{{task.name}}</h4>
+                        <h6 class="card-subtitle mb-2 text-muted"><strong>Story Point</strong>: {{task.story_point}}</h6>
+                        <h6 class="card-subtitle mb-2 text-muted"><strong>Priority</strong>: {{task.priority}}</h6>
+                        <div class="d-flex flex-wrap align-items-start">
+                            <h6 class="card-subtitle mb-2 text-muted mr-2 tags-container">
+                                <strong>Tags</strong>:
+                                {% for tag in task.tags.all %}
+                                    <span class="badge badge-info m-0">{{tag}}</span>
+                                {% endfor %}
+                                <span class="more-tags">...</span>
+                            </h6>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="{% url 'delete_task' task.id %}" class="card-link btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a>
                     </div>
                 </div>
             </div>
-        {% endfor %}
-
+            {% endfor %}
     </div> <!-- End of row -->
 </div> <!-- End of container -->
 
+<!-- Modal -->
+<div class="modal fade" id="createNewTask" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form id="taskForm" method="POST">
+                {% csrf_token %}
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Create New Task</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
 
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="d-grid gap-3 text-start">
+                        {{ form.name| as_crispy_field }}
+                        {{ form.type| as_crispy_field}}
+                        {{ form.priority| as_crispy_field}}
+                        {{ form.description| as_crispy_field}}
+                        {{ form.story_point| as_crispy_field}}
+                        {{ form.assignee| as_crispy_field}}
+                        {{ form.tags| as_crispy_field}}
+                        {{ form.status| as_crispy_field}}
+                        {{ form.stage| as_crispy_field}}
+                    </div>
+                </div>
+
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <!-- Action button -->
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block js %}
     <script>
+        // Function to change the view of product backlog
         function changeView() {
             const selectedView = document.getElementById("view").value;
             if (selectedView === "listView") {
@@ -89,5 +161,22 @@
                 document.getElementById("cardView").style.display = "block";
             }
         }
+
+        // AJax code to trigger the modal
+        $('#createNewTask').on('shown.bs.modal', function () {
+            // Focus on the first input of the form when the modal is shown
+            $('#taskForm input:first').trigger('focus')
+        })
+
+        // Select2 modules for Tags input
+        $(document).ready(function () {
+            $('#id_tags').select2({
+                tags: true,
+                tokenSeparators: [','],
+                allowClear: true,
+                placeholder: 'Select tag(s)',
+                theme: 'bootstrap',
+            });
+        });
     </script>
 {% endblock %}
