--- a/project_management_app/project_task/templates/project_task/base.html
+++ b/project_management_app/project_task/templates/project_task/base.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    {% block title %}
-    {% endblock %}
+    {% block title %} {% endblock %}
+    {% block extra_styles %}{% endblock %}
+    {% block js %} {% endblock %}
 
     {% block css %}
     <!-- Bootstrap CSS -->
@@ -61,9 +62,6 @@
             padding-top: 0; /* Adjust this value as needed */
         }
     </style>
-    {% endblock %}
-
-    {% block js %}
     {% endblock %}
 </head>
 
