--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -34,10 +34,16 @@
         <!-- View options -->
         <div class="col-sm-10">
             <label for="view">View:</label>
-            <select id="view" onchange="changeView()">
-                <option value="listView">List View</option>
-                <option value="cardView">Card View</option>
+            <select id="view" onchange="changeViewType(this.value)">
+                {% if current_view == 'list_view' %}
+                <option value="list_view" selected>List View</option>
+                <option value="card_view">Card View</option>
+                {% else %}
+                <option value="list_view">List View</option>
+                <option value="card_view" selected>Card View</option>
+                {% endif %}
             </select>
+
         </div>
         <!-- Button trigger modal -->
         <div class="col-sm-2 text-right" id="create-task-listview">
@@ -46,65 +52,14 @@
     </div>
 </div>
 
-<!-- List view -->
-<div class="container-fluid" id="listView">
-    <table class="table table-striped table-bordered">
-        <thead class="thead-light">
-            <tr>
-                <th>Name</th>
-                <th>Story Point</th>
-                <th>Priority</th>
-                <th>Tags</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody id="backlogTable">
-            <!-- Rows will be dynamically added here -->
-            {% for task in tasks%}
-            <tr>
-                <td>{{task.name}}</td>
-                <td>{{task.story_point}}</td>
-                <td>{{task.priority}}</td>
-                <td>
-                    {% for tag in task.tags.all %}
-                        <span class="badge badge-info m-1">{{tag}}</span>
-                    {% endfor %}
-                </td>
-                <td><a href="{% url 'delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a></td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
-
-<!-- Card View Section -->
-<div class="container-fluid" id="cardView" style="display: none;">
-    <div class="row">
-        {% for task in tasks %}
-            <div class="col-sm-3">
-                <div class="card mb-3" style="height: 13rem;">
-                    <div class="card-body">
-                        <h4 class="card-title">{{task.name}}</h4>
-                        <h6 class="card-subtitle mb-2 text-muted"><strong>Story Point</strong>: {{task.story_point}}</h6>
-                        <h6 class="card-subtitle mb-2 text-muted"><strong>Priority</strong>: {{task.priority}}</h6>
-                        <div class="d-flex flex-wrap align-items-start">
-                            <h6 class="card-subtitle mb-2 text-muted mr-2 tags-container">
-                                <strong>Tags</strong>:
-                                {% for tag in task.tags.all %}
-                                    <span class="badge badge-info m-0">{{tag}}</span>
-                                {% endfor %}
-                                <span class="more-tags">...</span>
-                            </h6>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <a href="{% url 'delete_task' task.id %}" class="card-link btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-    </div> <!-- End of row -->
-</div> <!-- End of container -->
+<!-- View templates -->
+{% if current_view == 'list_view' %}
+    <!-- List view -->
+    {% include "project_task/pb_list_view.html" %}
+{% elif current_view == 'card_view' %}
+    <!-- Card View Section -->
+    {% include "project_task/pb_card_view.html" %}
+{% endif %}
 
 <!-- Modal -->
 <div class="modal fade" id="createNewTask" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -149,17 +104,34 @@
 {% endblock %}
 
 {% block js %}
+    <!-- jQuery Library -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        // Function to change the view of product backlog
-        function changeView() {
-            const selectedView = document.getElementById("view").value;
-            if (selectedView === "listView") {
-                document.getElementById("listView").style.display = "block";
-                document.getElementById("cardView").style.display = "none";
-            } else if (selectedView === "cardView") {
-                document.getElementById("listView").style.display = "none";
-                document.getElementById("cardView").style.display = "block";
+        // Function to change the view type
+        function changeViewType(viewType) {
+            // Update the URL with the selected view type
+            window.location.href = updateURLParameter(window.location.href, 'view', viewType);
+
+        }
+
+        // Function to update the URL
+        function updateURLParameter(url, param, paramVal) {
+            let newAdditionalURL = "";
+            let tempArray = url.split("?");
+            let baseURL = tempArray[0];
+            let additionalURL = tempArray[1];
+            let temp = "";
+            if (additionalURL) {
+                tempArray = additionalURL.split("&");
+                for (let i = 0; i < tempArray.length; i++) {
+                    if (tempArray[i].split('=')[0] !== param) {
+                        newAdditionalURL += temp + tempArray[i];
+                        temp = "&";
+                    }
+                }
             }
+            let rowsTxt = temp + "" + param + "=" + paramVal;
+            return baseURL + "?" + newAdditionalURL + rowsTxt;
         }
 
         // AJax code to trigger the modal
