--- a/project_management_app/project_task/templates/project_task/pb_card_view.html
+++ b/project_management_app/project_task/templates/project_task/pb_card_view.html
@@ -19,7 +19,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'delete_task' task.id %}" class="card-link btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a>
+                        <a href="{% url 'delete_task' task.id %}" class="btn btn-danger delete-btn">Delete</a>
                     </div>
                 </div>
             </div>
