--- a/project_management_app/project_task/templates/project_task/pb_list_view.html
+++ b/project_management_app/project_task/templates/project_task/pb_list_view.html
@@ -22,7 +22,9 @@
                         <span class="badge badge-info m-1">{{tag}}</span>
                     {% endfor %}
                 </td>
-                <td><a href="{% url 'delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a></td>
+                <td>
+                    <a href="{% url 'delete_task' task.id %}" class="btn btn-danger delete-btn">Delete</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
