--- a/project_management_app/project_task/templates/project_task/pb_card_view.html
+++ b/project_management_app/project_task/templates/project_task/pb_card_view.html
@@ -2,27 +2,34 @@
 <div class="container-fluid" id="cardView">
     <div class="row">
         {% for task in tasks %}
-            <div class="col-sm-3">
-                <div class="card mb-3" style="height: 13rem;">
-                    <div class="card-body">
-                        <h4 class="card-title">{{task.name}}</h4>
-                        <h6 class="card-subtitle mb-2 text-muted"><strong>Story Point</strong>: {{task.story_point}}</h6>
-                        <h6 class="card-subtitle mb-2 text-muted"><strong>Priority</strong>: {{task.priority}}</h6>
-                        <div class="d-flex flex-wrap align-items-start">
-                            <h6 class="card-subtitle mb-2 text-muted mr-2 tags-container">
-                                <strong>Tags</strong>:
-                                {% for tag in task.tags.all %}
-                                    <span class="badge badge-info m-0">{{tag}}</span>
-                                {% endfor %}
-                                <span class="more-tags">...</span>
-                            </h6>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <a href="{% url 'delete_task' task.id %}" class="btn btn-danger delete-btn">Delete</a>
+        <!-- Create a card for each task -->
+        <div class="col-sm-3">
+            <div class="card mb-3" style="height: 13rem;">
+                <div class="card-body">
+                    <h4 class="card-title">{{task.name}}</h4>
+                    <h6 class="card-subtitle mb-2 text-muted"><strong>Story Point</strong>: {{task.story_point}}</h6>
+                    <h6 class="card-subtitle mb-2 text-muted"><strong>Priority</strong>: {{task.priority}}</h6>
+                    <div class="d-flex flex-wrap align-items-start">
+                        <h6 class="card-subtitle mb-2 text-muted mr-2 tags-container">
+                            <strong>Tags</strong>:
+                            {% for tag in task.tags.all %}
+                            <span class="badge badge-info m-0">{{tag}}</span>
+                            {% endfor %}
+                            <span class="more-tags">...</span>
+                        </h6>
                     </div>
                 </div>
+                <div class="card-footer">
+                    <a href="{% url 'delete_task' task.id %}" class="btn btn-danger delete-btn">Delete</a>
+                </div>
             </div>
-            {% endfor %}
+        </div>
+
+        {% empty %}
+        <!-- If no tasks are available -->
+        <div class="col-12 text-center">
+            <p class="mt-5">No tasks available.</p>
+        </div>
+        {% endfor %}
     </div> <!-- End of row -->
 </div> <!-- End of container -->
