--- a/project_management_app/project_task/templates/project_task/pb_list_view.html
+++ b/project_management_app/project_task/templates/project_task/pb_list_view.html
@@ -1,32 +1,38 @@
 <!-- List view -->
 <div class="container-fluid" id="listView">
     <table class="table table-striped table-bordered">
+        <!-- Table header -->
         <thead class="thead-light">
-            <tr>
-                <th>Name</th>
-                <th>Story Point</th>
-                <th>Priority</th>
-                <th>Tags</th>
-                <th>Action</th>
-            </tr>
+        <tr>
+            <th>Name</th>
+            <th>Story Point</th>
+            <th>Priority</th>
+            <th>Tags</th>
+            <th>Action</th>
+        </tr>
         </thead>
+        <!-- Table Rows showing tasks -->
         <tbody id="backlogTable">
-            <!-- Rows will be dynamically added here -->
-            {% for task in tasks%}
-            <tr>
-                <td>{{task.name}}</td>
-                <td>{{task.story_point}}</td>
-                <td>{{task.priority}}</td>
-                <td>
-                    {% for tag in task.tags.all %}
-                        <span class="badge badge-info m-1">{{tag}}</span>
-                    {% endfor %}
-                </td>
-                <td>
-                    <a href="{% url 'delete_task' task.id %}" class="btn btn-danger delete-btn">Delete</a>
-                </td>
-            </tr>
-            {% endfor %}
+        {% for task in tasks%}
+        <tr>
+            <td>{{task.name}}</td>
+            <td>{{task.story_point}}</td>
+            <td>{{task.priority}}</td>
+            <td>
+                {% for tag in task.tags.all %}
+                <span class="badge badge-info m-1">{{tag}}</span>
+                {% endfor %}
+            </td>
+            <td>
+                <a href="{% url 'delete_task' task.id %}" class="btn btn-danger delete-btn">Delete</a>
+            </td>
+        </tr>
+        {% empty %}
+        <!-- If no tasks are available -->
+        <tr>
+            <td colspan="6" class="text-center">No tasks available.</td>
+        </tr>
+        {% endfor %}
         </tbody>
     </table>
 </div>
